# RoverSBC

./: README.md
articubot_description/: robot.urdf.xacro
rover_bringup/: CMakeLists.txt  package.xml
rover_bringup/launch/: articubot.launch.py  robot.launch.py  rover_state_publisher.launch.py
rover_description/: CMakeLists.txt  package.xml
rover_description/urdf/: gazebo.xacro  macro.xacro  rover.urdf
rover_msgs/: CMakeLists.txt  package.xml
rover_node/: CMakeLists.txt  package.xml
rover_node/include/rover_node/: control_table.hpp  diff_drive_controller.hpp  odometry.hpp  rover.hpp
rover_node/param/: rover.yaml
rover_node/src/: diff_drive_controller.cpp  node_main.cpp  odometry.cpp  rover.cpp  rover_tf2_broadcaster.cpp
